# replayt-opentelemetry-exporter

./: .alignment_result.json  .gitignore  .handoff.md  CHANGELOG.md  README.md  handoff.md  pyproject.toml
.backlog-workflow/710ec9ca-74b6-488e-a1f4-95cdfcc0b5f5/phase_2/: handoff.md
.github/workflows/: ci.yml  otel-2x-spike.yml  publish-pypi.yml
docs/: CI_SPEC.md  COMPATIBILITY_MATRIX_SPEC.md  DESIGN_PRINCIPLES.md  MISSION.md  OPERATOR_MONITORING_SPEC.md  OPERATOR_RUNBOOK.md  PUBLIC_API_SPEC.md  REFERENCE_DOCUMENTATION_SPEC.md  RELEASE_ENGINEERING_SPEC.md  REPLAYT_ECOSYSTEM_IDEA.md  RUN_SUMMARY_SPEC.md  SECURITY_REDACTION.md  TESTING_SPEC.md
docs/examples/: record_run_outcome_run_summary.md  runner_workflow_run_span.md
docs/reference-documentation/: README.md  replayt-0.4.0.md  replayt-latest.md
scripts/: otel_2x_probe.py
src/replayt_opentelemetry_exporter/: __init__.py  tracing.py
tests/: test_ci_workflow.py  test_operator_runbook.py  test_otel_2x_probe.py  test_otel_2x_spike_workflow.py  test_publish_workflow.py  test_pypi_index.py  test_pyproject_dependencies.py  test_reference_documentation.py  test_tracing.py  test_version_sync.py
